// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArrayField component is correctly rendering with Add button 1`] = `
<div>
  <div
    className="text-center border mb-2"
  >
    <div
      className="d-flex flex-row border-bottom font-weight-bold py-2"
    >
      <div
        className="mx-1"
        style={
          Object {
            "flex": "1 1 0",
          }
        }
      >
        Name
      </div>
      <div
        className="mx-1"
        style={
          Object {
            "flex": "1 1 0",
          }
        }
      >
        Name
      </div>
      <div
        className="mx-1"
        style={
          Object {
            "flex": "1 1 0",
          }
        }
      />
    </div>
    <div>
      <div
        style={Object {}}
      >
        <div
          className="table-row even-row "
        >
          <div
            className="d-flex flex-row border-bottom table-inner-row"
          >
            <div
              className="align-self-center mx-1"
              style={
                Object {
                  "flex": "1 1 0",
                  "minWidth": 0,
                }
              }
            >
              <div
                className=""
                style={
                  Object {
                    "display": "inline",
                  }
                }
                tabIndex={undefined}
                title={undefined}
              >
                <div
                  className="form-group my-0   "
                >
                  <input
                    className="form-control"
                    id="test-field[0].textField"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value={undefined}
                  />
                </div>
              </div>
            </div>
            <div
              className="align-self-center mx-1"
              style={
                Object {
                  "flex": "1 1 0",
                  "minWidth": 0,
                }
              }
            >
              <div
                className=""
                style={
                  Object {
                    "display": "inline",
                  }
                }
                tabIndex={undefined}
                title={undefined}
              >
                <div
                  className="form-group my-0   "
                >
                  <input
                    className="form-control"
                    id="test-field[0].textField2"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value={undefined}
                  />
                </div>
              </div>
            </div>
            <div
              className="align-self-center mx-1"
              style={
                Object {
                  "flex": "1 1 0",
                  "minWidth": 0,
                }
              }
            >
              <button
                className="btn btn-outline-danger"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                Delete
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        style={Object {}}
      >
        <div
          className="table-row  "
        >
          <div
            className="d-flex flex-row border-bottom table-inner-row"
          >
            <div
              className="align-self-center mx-1"
              style={
                Object {
                  "flex": "1 1 0",
                  "minWidth": 0,
                }
              }
            >
              <div
                className=""
                style={
                  Object {
                    "display": "inline",
                  }
                }
                tabIndex={undefined}
                title={undefined}
              >
                <div
                  className="form-group my-0   "
                >
                  <input
                    className="form-control"
                    id="test-field[1].textField"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value={undefined}
                  />
                </div>
              </div>
            </div>
            <div
              className="align-self-center mx-1"
              style={
                Object {
                  "flex": "1 1 0",
                  "minWidth": 0,
                }
              }
            >
              <div
                className=""
                style={
                  Object {
                    "display": "inline",
                  }
                }
                tabIndex={undefined}
                title={undefined}
              >
                <div
                  className="form-group my-0   "
                >
                  <input
                    className="form-control"
                    id="test-field[1].textField2"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value={undefined}
                  />
                </div>
              </div>
            </div>
            <div
              className="align-self-center mx-1"
              style={
                Object {
                  "flex": "1 1 0",
                  "minWidth": 0,
                }
              }
            >
              <button
                className="btn btn-outline-danger"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                Delete
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="text-center"
  >
    <button
      className="btn btn-outline-success margin-bottom-lg"
      onClick={[Function]}
      type="button"
    >
      Add item
    </button>
  </div>
</div>
`;

exports[`ArrayField component is correctly rendering with no Add button 1`] = `
<div>
  <div
    className="text-center border mb-2"
  >
    <div
      className="d-flex flex-row border-bottom font-weight-bold py-2"
    >
      <div
        className="mx-1"
        style={
          Object {
            "flex": "1 1 0",
          }
        }
      >
        Name
      </div>
      <div
        className="mx-1"
        style={
          Object {
            "flex": "1 1 0",
          }
        }
      >
        Name
      </div>
      <div
        className="mx-1"
        style={
          Object {
            "flex": "1 1 0",
          }
        }
      />
    </div>
    <div>
      <div
        style={Object {}}
      >
        <div
          className="table-row even-row "
        >
          <div
            className="d-flex flex-row border-bottom table-inner-row"
          >
            <div
              className="align-self-center mx-1"
              style={
                Object {
                  "flex": "1 1 0",
                  "minWidth": 0,
                }
              }
            >
              <div
                className=""
                style={
                  Object {
                    "display": "inline",
                  }
                }
                tabIndex={undefined}
                title={undefined}
              >
                <div
                  className="form-group my-0   "
                >
                  <input
                    className="form-control"
                    id="test-field[0].textField"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value={undefined}
                  />
                </div>
              </div>
            </div>
            <div
              className="align-self-center mx-1"
              style={
                Object {
                  "flex": "1 1 0",
                  "minWidth": 0,
                }
              }
            >
              <div
                className=""
                style={
                  Object {
                    "display": "inline",
                  }
                }
                tabIndex={undefined}
                title={undefined}
              >
                <div
                  className="form-group my-0   "
                >
                  <input
                    className="form-control"
                    id="test-field[0].textField2"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value={undefined}
                  />
                </div>
              </div>
            </div>
            <div
              className="align-self-center mx-1"
              style={
                Object {
                  "flex": "1 1 0",
                  "minWidth": 0,
                }
              }
            >
              <button
                className="btn btn-outline-danger"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                Delete
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        style={Object {}}
      >
        <div
          className="table-row  "
        >
          <div
            className="d-flex flex-row border-bottom table-inner-row"
          >
            <div
              className="align-self-center mx-1"
              style={
                Object {
                  "flex": "1 1 0",
                  "minWidth": 0,
                }
              }
            >
              <div
                className=""
                style={
                  Object {
                    "display": "inline",
                  }
                }
                tabIndex={undefined}
                title={undefined}
              >
                <div
                  className="form-group my-0   "
                >
                  <input
                    className="form-control"
                    id="test-field[1].textField"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value={undefined}
                  />
                </div>
              </div>
            </div>
            <div
              className="align-self-center mx-1"
              style={
                Object {
                  "flex": "1 1 0",
                  "minWidth": 0,
                }
              }
            >
              <div
                className=""
                style={
                  Object {
                    "display": "inline",
                  }
                }
                tabIndex={undefined}
                title={undefined}
              >
                <div
                  className="form-group my-0   "
                >
                  <input
                    className="form-control"
                    id="test-field[1].textField2"
                    onBlur={[Function]}
                    onChange={[Function]}
                    type="text"
                    value={undefined}
                  />
                </div>
              </div>
            </div>
            <div
              className="align-self-center mx-1"
              style={
                Object {
                  "flex": "1 1 0",
                  "minWidth": 0,
                }
              }
            >
              <button
                className="btn btn-outline-danger"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                Delete
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
